--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<version>3.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>6.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
