--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,10 @@
 			<version>3.0.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
