--- a/src/main/resources/application.demo.yaml
+++ b/src/main/resources/application.demo.yaml
@@ -1,17 +1,32 @@
+jwt:
+  # 密钥请自行生成, 和 UUID 长度一致
+  secret: "44d6e7c6-488d-4a5a-b5f2-86a0bcd8908d"
+  # token 有效期, 毫秒
+  expiresMs: 86400000
 spring:
+  # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/wcf?useUnicode=true&characterEncoding=UTF-8
     username: wcf
     password: wcf
+  servlet:
+    # 附件大小
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      # maxInMemorySize
+      file-size-threshold: 10MB
+    # 文件上传相关配置
+    attachment:
+      # web 路径前缀
+      url: /attachments/
+      # 存储位置
+      path: /mnt/attachments/
   flyway:
     enabled: true
-
-    # SQL 脚本的目录,多个路径使用逗号分隔
+    # SQL 脚本的目录, 多个路径使用逗号分隔
     locations: classpath:db/migration
-jwt:
-  secret: "44d6e7c6-488d-4a5a-b5f2-86a0bcd8908d"
-  expiresMs: 86400000
 mybatis:
   mapper-locations:
     - classpath:db/mapper/*.xml
