--- a/src/main/resources/application.demo.yaml
+++ b/src/main/resources/application.demo.yaml
@@ -27,3 +27,7 @@ spring:
     enabled: true
     # SQL 脚本的目录, 多个路径使用逗号分隔
     locations: classpath:db/migration
+  data:
+    jdbc:
+      repositories:
+        enabled: false
